started saving of anchor docking state
 SVN 8750@trunk

--- a/examples/anchordocking/docking1.lpi
+++ b/examples/anchordocking/docking1.lpi
@@ -34,7 +34,7 @@
       </Unit0>
       <Unit1>
         <Filename Value="dockform1unit.pas"/>
-        <ComponentName Value="DockForm1"/>
+        <ComponentName Value="MainForm"/>
         <IsPartOfProject Value="True"/>
         <ResourceFilename Value="dockform1unit.lrs"/>
         <UnitName Value="DockForm1Unit"/>
